changed bg colour of canvas and fixed a bug where character could exist off screen

--- a/css/Page-2.css
+++ b/css/Page-2.css
@@ -104,6 +104,7 @@ button {
 #game {
   margin-top: 2%;
   border: 3px solid black;
+  background-color: rgba(236, 241, 243, 0.87);
 }
 
 #toggleButton {
